# EcfDgi.Client_C_Plus_Plus

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml  deploy_dev.yml  deploy_prod.yml
config/: appsettings.json
db/: schema.sql
src/Api/: AppServices.cpp  AppServices.h  JsonMapping.cpp  JsonMapping.h  main.cpp
src/Api/Configuration/: AppConfig.cpp  AppConfig.h
src/Api/Controllers/: AuthController.cpp  AuthController.h  CustomersController.cpp  CustomersController.h  EcfController.cpp  EcfController.h
src/Api/Filters/: AdminRoleFilter.cpp  AdminRoleFilter.h  JwtAuthFilter.cpp  JwtAuthFilter.h
src/Api/Services/: CurrentUserService.h
src/Application/Auth/: AuthDtos.h  AuthHandlers.cpp  AuthHandlers.h
src/Application/Common/: RequestValidators.cpp  RequestValidators.h
src/Application/Common/Behaviors/: Behaviors.h
src/Application/Common/Exceptions/: ValidationException.h
src/Application/Customers/: CustomerDtos.h  CustomerHandlers.cpp  CustomerHandlers.h
src/Application/Ecf/: EcfDtos.h  EcfHandlers.cpp  EcfHandlers.h
src/Application/Services/: EcfValidator.cpp  EcfValidator.h  PollingHelper.h
src/Domain/Common/: AuditableEntity.h
src/Domain/Entities/: Customer.h  EcfClientOptions.h  EcfDocument.h  ResponseModels.h  Rfce.h  User.h
src/Domain/Exceptions/: EcfException.h
src/Domain/Interfaces/: ICustomerRepository.h  IEcfClient.h  IEcfDocumentRepository.h  IEcfSequenceProvider.h  IEcfTransport.h  IEcfXmlSerializer.h  ISecurity.h  IUnitOfWork.h  IUserRepository.h
src/Infrastructure/: EcfClient.cpp  EcfClient.h  EcfFrontendClient.cpp  EcfFrontendClient.h
src/Infrastructure/Dgii/: DgiiDirectTransport.cpp  DgiiDirectTransport.h  EcfEnvironmentConfig.cpp  EcfEnvironmentConfig.h  EcfTokenManager.cpp  EcfTokenManager.h
src/Infrastructure/Persistence/: DbContext.cpp  DbContext.h  DbInitializer.cpp  DbInitializer.h  MemorySequenceProvider.cpp  MemorySequenceProvider.h  RowMappers.h  UnitOfWork.h
src/Infrastructure/Persistence/Repositories/: CustomerRepository.cpp  CustomerRepository.h  EcfDocumentRepository.cpp  EcfDocumentRepository.h  UserRepository.cpp  UserRepository.h
src/Infrastructure/Security/: EcfSecurityUtils.cpp  EcfSecurityUtils.h  EcfXmlSigner.cpp  EcfXmlSigner.h  JwtSettings.h  PasswordHasher.cpp  PasswordHasher.h  TokenService.cpp  TokenService.h
src/Infrastructure/Serialization/: EcfXmlSerializer.cpp  EcfXmlSerializer.h
src/Shared/Common/: Result.h  Sys.cpp  Sys.h
tests/: CMakeLists.txt  validator_tests.cpp
triplets/: x64-windows-custom.cmake  x86-windows.cmake
